# Surkl

./: .gitignore  CMakeLists.txt  README  README.md  main.cpp
.github/: FUNDING.yml
.github/workflows/: linux.yml
src/: version.hpp
src/core/: BookmarkItem.cpp  BookmarkItem.hpp  DeleteDialog.cpp  DeleteDialog.hpp  EdgeItem.cpp  EdgeItem.hpp  FileSystemScene.cpp  FileSystemScene.hpp  Inode.hpp  NodeItem.cpp  NodeItem.hpp  Scene.cpp  Scene.hpp  SceneStorage.cpp  SceneStorage.hpp  SessionManager.cpp  SessionManager.hpp  bookmark.cpp  bookmark.hpp  buttons.cpp  buttons.hpp  db.cpp  db.hpp  geometry.hpp  items.cpp  items.hpp  layout.cpp  layout.hpp  nodes.cpp  nodes.hpp  types.hpp
src/db/: db.cpp  stmt.hpp
src/gui/: AboutSurkl.cpp  AboutSurkl.hpp  GraphicsView.cpp  GraphicsView.hpp  InfoBar.cpp  InfoBar.hpp  MainWindow.cpp  MainWindow.hpp  Splitter.cpp  Splitter.hpp  SplitterHandle.cpp  SplitterHandle.hpp  SurklStyle.cpp  SurklStyle.hpp  ThemeSettings.cpp  ThemeSettings.hpp  UiStorage.cpp  UiStorage.hpp  WidgetId.hpp  logo.cpp  logo.hpp  theme.cpp  theme.hpp
src/gui/help/: HelpArea.cpp  HelpArea.hpp  docs.md
src/gui/theme/: ThemeArea.cpp  ThemeArea.hpp  ThemeSettings.cpp  ThemeSettings.hpp  theme.cpp  theme.hpp
src/gui/view/: GraphicsView.cpp  GraphicsView.hpp  Inode.cpp  Inode.hpp  QuadrantButton.cpp  QuadrantButton.hpp  ViewArea.cpp  ViewArea.hpp
src/gui/window/: AbstractWindowArea.cpp  AbstractWindowArea.hpp  Menu.cpp  Menu.hpp  RubberBand.cpp  RubberBand.hpp  TitleBar.cpp  TitleBar.hpp  Window.cpp  Window.hpp  buttons.cpp  buttons.hpp
src/test/: test_bookmark.cpp  test_bookmark.hpp  tst_NodeItem.cpp  tst_NodeItem.hpp  tst_bookmark.cpp  tst_bookmark.hpp  tst_theme.cpp  tst_theme.hpp
